dispatcher for each viewer instance

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -79,6 +79,7 @@
 	</script>
 	<script src="/adapt.min.js"></script>
 
+	<script src="/EventDispatcher.js" lang="text/javascript"></script>
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js" lang="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.js" lang="text/javascript"></script>
 	<script src='/app.min.js'></script>
