--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -267,10 +267,6 @@
 
 	      <div class="u-separator"></div>
 
-
-      	<p class="empty-profile-text  empty-message hide u-margin-top-30" style="display: block;">Esta obra aun no tiene reviews
-      	</p>
-
 	      <div class='reviews-items-container'>
 	      </div>
 
@@ -286,7 +282,7 @@
 	      	</div>
         {% else %}
 
-        	<p class="empty-profile-text  empty-message hide u-margin-top-30" style="display: block;">
+        	<p class="empty-profile-text  empty-message u-margin-top-30" style="display: block;">
         		<a href="/auth/login">Logeate, para agregar review</a>
         	</p>
         {% endif %}
@@ -346,7 +342,7 @@
 	    </div>
 	  </div>
 
-		<p class="empty-profile-text  empty-message hide u-margin-top-30" style="display: block;">El artista no tiene mas obras<br><br>
+		<p class="empty-profile-text hide empty-message hide u-margin-top-30">El artista no tiene mas obras<br><br>
 			<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
 		</p>
 
@@ -372,7 +368,7 @@
 	    </div>
 	  </div>
 
-		<p class="empty-profile-text  empty-message hide u-margin-top-30" style="display: block;">No existen obras relacionadas<br><br>
+		<p class="empty-profile-text empty-message hide u-margin-top-30">No existen obras relacionadas<br><br>
 			<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
 		</p>
 
