new singgle collection design

--- a/app/styles/texts.styl
+++ b/app/styles/texts.styl
@@ -50,6 +50,13 @@
 	line-height 1.5
 	font-weight bold
 
+.am-navigation-subtext
+	font-family: 'Montserrat',sans-serif;
+	text-align: center;
+	color: gray;
+	line-height: 1.5;
+
+
 .am-Footer-subtitle-text
 	font-family 'Montserrat', sans-serif
 	letter-spacing 2px
