--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -546,6 +546,18 @@ body
 	a
 		color #333
 
+
+.single-collection-header
+	display flex
+	align-items center
+	justify-content center
+	img
+		width 50px
+		height 50px
+		border-radius 50%
+		margin-right 10px
+
+
 .footer
 	padding 40px 0
 	&-logo
@@ -583,6 +595,8 @@ body
 // 		&-links
 // 		&-suscribe
 // 			flex 1 70%
+
+
 
 @media (min-width: 1000px)
 	.footer
