add description in single collection

--- a/app/styles/texts.styl
+++ b/app/styles/texts.styl
@@ -50,12 +50,16 @@
 	line-height 1.5
 	font-weight bold
 
-.am-navigation-subtext
+.am-collection-text
 	font-family: 'Montserrat',sans-serif;
-	text-align: center;
 	color: gray;
 	line-height: 1.5;
 
+.am-collection-desc
+	font-family: 'PT Serif',serif;
+	font-size: 16px;
+	color: #959ea0;
+	line-height: 1.25;
 
 .am-Footer-subtitle-text
 	font-family 'Montserrat', sans-serif
