--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -15,12 +15,21 @@
 		</div> -->
 		<div class="grid-100">
 			<div class="single-collection-header">
-				<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,g_face,d_am_avatar.jpg/v1448006979/rziwwm6pgcorwmec0baf.jpg">
+				<a href="#">
+					<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,g_face,d_am_avatar.jpg/v1448006979/rziwwm6pgcorwmec0baf.jpg">
+				</a>
 				<div>
 					<p class="am-navigation-text">{{collection.User.firstname}}</p>
-					<p class="am-navigation-subtext">Coleccion > {{collection.name}}</p>
+					<p class="am-collection-text">Coleccion > {{collection.name}}</p>
 				</div>
 			</div>
+		</div>
+
+		<div class="grid-100 u-margin-top-30">
+			<p class="am-collection-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat.</p>
 		</div>
 		<!-- <div class="grid-100">
 			<p class="am-navigation-text">{{collection.User.firstname}} > Coleccion > {{collection.name}}</p>
