add photo collection

--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -15,9 +15,9 @@
 		</div> -->
 		<div class="grid-100">
 			<div class="single-collection-header">
-				<img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,g_face,d_am_avatar.jpg/v1448006979/rziwwm6pgcorwmec0baf.jpg">
+				<img src="{{collection.User.photo}}">
 				<div>
-					<p class="am-navigation-text">{{collection.User.firstname}}</p>
+					<p class="am-navigation-text">{{collection.User.fullname}}</p>
 					<p class="am-navigation-subtext">Coleccion > {{collection.name}}</p>
 				</div>
 			</div>
