--- a/app/styles/texts.styl
+++ b/app/styles/texts.styl
@@ -54,6 +54,12 @@
 	font-family: 'Montserrat',sans-serif;
 	color: gray;
 	line-height: 1.5;
+	text-align center
+	span:first-child
+		color: #333;
+		font-size: 14px;
+	// span:first-child
+	// 	color
 
 .am-collection-desc
 	font-family: 'PT Serif',serif;
