--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -16,7 +16,7 @@
 				</a>
 				<div>
 					<p class="am-navigation-text">{{collection.User.fullname}}</p>
-					<p class="am-navigation-subtext">Coleccion > {{collection.name}}</p>
+					<p class="am-collection-text"><span>Coleccion ></span>&nbsp;&nbsp;<span>{{collection.name}}</span></p>
 				</div>
 			</div>
 		</div>
