--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -109,6 +109,7 @@
       <div class="grid portfolio-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
+			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 		</div>
 	</div>
 
@@ -125,6 +126,7 @@
       <div class="grid store-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
+			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 		</div>
 	</div>
 
@@ -140,6 +142,7 @@
       <div class="grid collections-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
+			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 		</div>
 	</div>
 
@@ -156,6 +159,7 @@
       <div class="grid followings-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
+			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 		</div>
 	</div>
 	<div class="discover-content followers-wrapper  grid-container u-padding-top-10 u-padding-bottom-70
@@ -171,6 +175,7 @@
       <div class="grid followers-container work-layout-discover">
 				<div class="grid-sizer"></div>
       </div>
+			<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 		</div>
 	</div>
 
