--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -97,166 +97,16 @@
 			new APP.AM();
 		}
 	</script>
+	
+	{% include 'elements/work.html' %}
+	{% include 'elements/user.html' %}
+	{% include 'elements/product.html' %}
+	{% include 'elements/collection.html' %}
+	{% include 'elements/carrouselItem.html' %}
 
-	<script type="text/template" id="template-filter-item">
-		<div class="am-Filter-item">
-			<% if (meta === "category") { %>
-				<p class="am-Filter-option uppercase" data-meta=<%= meta %> data-value=<%= nameSlugify %> ><%= name %>
-					<i class="fa fa-chevron-right"></i>
-				</p>
-			<% } %>
-			<% if (meta === "order") { %>
-				<p class="am-Filter-option uppercase" data-meta=<%= meta %> data-value=<%= name %> ><%= name %>
-					<i class="fa fa-chevron-right"></i>
-				</p>
-			<% } %>
-		</div>
-	</script>
-
-	<script type="text/template" id="template-work">
-		<div class="grid-item">
-			<div class="work-card">
-
-				<div class="lock"><i class="bi_user-lock"></i></div>
-
-				<% if (viewer && viewer.isAdmin) { %>
-					<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
-				<% } else { %>
-					<% if (featured) { %>
-						<div class="featured">AM</div>
-					<% } %>
-				<% } %>
-
-				<% if (viewer && viewer.isAdmin) { %>
-					<div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
-				<% } %>
-
-				<% if (owner) { %>
-					<div class="edit"><i class="bi_editorial-compose"></i></div>
-				<% } %>
-
-				<a href="/user/<%=User.username%>/work/<%=nameSlugify%>">
-					<img src="<%= addFilter(photo, 'w_300,d_am_avatar.jpg') %>">
-				</a>
-			</div>
-		</div>
-	</script>
-
-	<script type="text/template" id="template-user">
-		<div class="grid-item">
-	  	<div class="artist-card">
-
-	  		<% if (viewer && viewer.isAdmin) { %>
-	  			<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
-	  		<% } else { %>
-	  			<% if (featured) { %>
-	  				<div class="featured">AM</div>
-	  			<% } %>
-	  		<% } %>
-
-				<a href="/user/<%=username%>">
-		  		<div class="artist-card-info">
-		  			<img src="<%=photo%>">
-		  			<div>
-		  				<p class="name uppercase"><%=fullname %></p>
-		  				<p class="city"><%=city%>, <%=country%></p>
-		  				<p class="stats"><i class="bi_ecommerce-diamon"></i> <%=numOfFollowers%></p>
-		  			</div>
-		  		</div>
-				</a>
-	  		<div class="artist-card-works">
-					<% _.each([0,1,2,3], function(i) { %>
-			  		<% if(Works[i] && Works[i].photo) { %>
-							<a href="/user/<%=username%>/work/<%=Works[i].nameSlugify%>" class="artist-card-work" style="background-image: url('<%= addFilter(Works[i].photo, 'w_120,h_120,c_fill') %>')"></a>
-			  		<% } else { %>
-		  				<div class="artist-card-work empty"></div>
-			  		<% } %>
-					<% }); %>
-	  		</div>
-	  		<div class="artist-card-follow">
-					<% if(following) { %>
-						<button class="am-Follow-button following">SIGUIENDO</button>
-					<% } else { %>
-						<button class="am-Follow-button">+ SEGUIR</button>
-					<% } %>
-	  		</div>
-	  	</div>
-	  </div>
-	</script>
-
-	<script type="text/template" id="template-product">
-		<div class="grid-item">
-			<a href="/user/<%=User.username%>/product/<%=nameSlugify%>">
-		  	<div class="product-card">
-					<div class="edit"><i class="bi_editorial-compose"></i></div>
-
-					<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
-					<div class="product-card-image" style="background-image: url('<%= addFilter(photo, 'w_300,h_300,c_fill') %>')"></div>
-		  		<div class="product-card-data">
-		  			<p><%= name %></p>
-		  			<p><%= User.firstname %></p>
-		  		</div>
-		  		<div class="product-card-stats">
-		  			<p><%= finalPrice %></p>
-		  			<p><%= likes %> &nbsp;&nbsp;&nbsp;<i class="bi_ecommerce-diamon"></i></p>
-		  		</div>
-		  	</div>
-		</a>
-	  </div>
-	</script>
-
-	<script type="text/template" id="template-collection">
-		<div class="grid-item">
-			<a href='/user/<%=User.username%>/collection/<%=nameSlugify%>'>
-				<div class="collection-card">
-
-					<div class="lock"><i class="bi_user-lock"></i></div>
-
-					<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
-					<div class="collection-card-stats">
-						<p><%=name%></p>
-					</div>
-					<div class="collection-card-images">
-						<% _.each([0,1,2], function(i) { %>
-				  		<% if(works[i] && works[i].photo) { %>
-								<div class="collection-card-image" style="background-image: url('<%= addFilter(works[i].photo, 'w_300,h_300,c_fill') %>')"></div>
-				  		<% } else { %>
-								<div class="collection-card-image empty"></div>
-				  		<% } %>
-						<% }); %>
-					</div>
-					<div class="collection-card-artist">
-						<div>
-							<p>Curado Por:</p>
-							<p><%=User.firstname%></p>
-						</div>
-						<img src="<%=User.photo%>">
-					</div>
-				</div>
-			</a>
-		</div>
-	</script>
-
-	<script type="text/template" id="template-carrouselItem">
-		<a href='/user/<%=User.username%>/<%=entity%>/<%=nameSlugify%>'>
-			<div class="am-MoreImages" style="background-image: url(<%=addFilter(photo, 'w_230,h_230,c_fill')%>);"></div>
-		</a>
-	</script>
-
-	<script type="text/template" id="template-review">
-		<div class="review">
-			<div class="avatar"><img src="<%=User.photo%>"></div>
-			<div class="content">
-				<div class="info">
-					<p class="name"><%=User.firstname %></p>&nbsp;&nbsp;&nbsp;
-					<p class="date"><i class="bi_interface-clock"></i> <%=formatDate(createdAt)%></p>
-				</div>
-				<p class="text"><%=value%></p>
-			</div>
-		</div>
-	</script>
+	{% include 'elements/review.html' %}
+	{% include 'elements/filterItem.html' %}
 
 	{% block scripts %} {% endblock %}
-
 </body>
 </html>
