--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -163,7 +163,7 @@
 					<a href='/products/type/{{element.ProductType.nameSlugify}}/page-1/?order=popularity'><span class="am-Category-box u-margin-top-7">{{element.ProductType.name}}</span></a>
 					<div class="info-box u-margin-top-25">
 						<div class="header">
-							<p class="selected">PRODUCTOS</p>
+							<p class="selected">COMPRAR</p>
 						</div>
 						<div class="body">
 							<p class="text u-margin-top-10">Precio por unidad:</p>
