--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -66,115 +66,22 @@
 		<div class="grid work-layout-discover">
 			<div class="grid-sizer"></div>
 		</div>
-	</div>
-	<div class="grid-100 u-margin-top-10">
-		<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 		<div class="am-search-result empty-message hide">
-			No se encontraron resultados para: <span class="am-report-link" href="">{{data.filters.currentCategory}}</span>
+			No se encontraron resultados
 			<br><br>
 			<a href="/works/category/all/page-1" class="am-report-link blue" href="">Volver a todas las obras</a>
 		</div>
+		<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
 	</div>
 </div>
 {% endblock %}
 
 {% block scripts %}
 <script type="text/javascript">
-	$(document).ready(function() {
-
-
-			 var data = {{data|json|safe}};
-
-			 function ChangeUrl(page, url) {
-			        if (typeof (history.pushState) != "undefined") {
-			            var obj = {Page: page, Url: url};
-			            history.pushState(obj, obj.Page, obj.Url);
-			        } else {
-			            window.location.href = "homePage";
-			            // alert("Browser does not support HTML5.");
-			        }
-			    }
-					console.log(data);
-
-					DataApp.currentUrl = data.url;
-					ChangeUrl('lol', data.url);
-
-		new APP.DiscoverScreen('work', $('.grid'), 'infinite', {{data|json|safe}});
-		var filterRight = $('.filter.right')
-		var rightSelect = $('.filter.right .am-Select')
-
-		$(rightSelect).click(function () {
-			var state = filterRight.attr('data-state')
-			if(state == 'closed') filterRight.attr('data-state', 'open')
-			else filterRight.attr('data-state', 'closed')
-		})
-
-		var filterLeft = $('.filter.left')
-		var leftSelect = $('.filter.left .am-Select')
-		var discoverContent = $('.discover-content')
-
-		$(leftSelect).click(function () {
-			var state = filterLeft.attr('data-state')
-			if(state == 'closed') {
-				filterLeft.attr('data-state', 'open')
-				discoverContent.attr('data-state', 'expand').trigger('resetLayout')
-			}
-			else{
-				filterLeft.attr('data-state', 'closed')
-				discoverContent.attr('data-state', 'reduce').trigger('resetLayout')
-			}
-		})
-
-		var device = new Device({
-											toDesktop: function () {
-												console.log('toDesktop!')
-											},
-											toMobile: function () {
-												console.log('toMobile!')
-												$('.filter.left .left-menu').css('display', 'block')
-											}
-										})
-
-		if(device.getVal() == "mobile") {
-			console.log('isMobile')
-			$(leftSelect).trigger( "click" )
-			$('.filter.left .left-menu').css('display', 'block')
-		}
-
-		// var switchButton = $('.am-Switch-button')
-		// $(switchButton).click(function () {
-		// 	var state = switchButton.attr('data-state')
-		// 	console.log('state: ', state)
-		// 	if(state == "active") switchButton.attr('data-state', 'inactive')
-		// 	else switchButton.attr('data-state', 'active')
-		// })
+	var data = {{data|json|safe}};
+	$(function() {
+		new APP.DiscoverScreen('work', $('.grid'), 'infinite', data);
 	});
-
-
-	function Device (options) {
-
-		var val = window.innerWidth < 1000 ? 'mobile' : 'desktop',
-		    toDesktop = options.toDesktop,
-		    toMobile = options.toMobile;
-
-
-		window.addEventListener('resize', function(){
-
-			var temp = val;
-
-			val = window.innerWidth < 1000 ? 'mobile' : 'desktop';
-
-			if(temp == 'mobile' && val == 'desktop') toDesktop();
-			if(temp == 'desktop' && val == 'mobile') toMobile();
-		});
-
-		function getVal () { return val; }
-
-		return {
-		    getVal: getVal
-		};
-	}
-
 </script>
 
 {% endblock %}
