--- a/app/views/partials/elements/collection.html
+++ b/app/views/partials/elements/collection.html
@@ -5,7 +5,13 @@
         <% if(!public) { %>
           <div class="lock"><i class="bi_user-lock"></i></div>
         <% } %>
-        <div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
+        <% if (viewer && viewer.isAdmin) { %>
+          <div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
+        <% } else { %>
+          <% if (featured) { %>
+            <div class="featured">AM</div>
+          <% } %>
+        <% } %>
         <div class="collection-card-stats">
           <p><%=name%></p>
         </div>
