--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -68,7 +68,7 @@
 						</li>
 					{% else %}
 						<li class="am-Header-menu-item">
-							<a class="am-Signin-button" href="/auth/login">
+							<a class="am-Signin-button">
 								<!-- <i class="fa fa-user"></i> INGRESAR -->
 								<i class="bi_user-single-a"></i> INGRESAR
 							</a>
