--- a/app/views/partials/elements/product.html
+++ b/app/views/partials/elements/product.html
@@ -1,7 +1,9 @@
 <script type="text/template" id="template-product">
   <div class="grid-item">
       <div class="product-card">
-        <div class="edit"><i class="bi_editorial-compose"></i></div>
+        <% if (owner) { %>
+          <div class="edit"><i class="bi_editorial-compose"></i></div>
+        <% } %>
         <% if (viewer && viewer.isAdmin) { %>
           <div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
         <% } else { %>
