new more empty images layout

--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -283,7 +283,7 @@
 
 	  <div class="grid-container">
 	    <div class="grid-100">
-	      <div class="more-carousel">
+	    	<div class="more-empty">
 					{% if entity === 'work'%}
 					<p class="empty-profile-text empty-message hide u-margin-top-30">El artista no tiene mas obras<br><br>
 						<a href="/works/category/all/page-1/">Descubre todas las obras de AM</a>
@@ -293,6 +293,8 @@
 						<a href="/products/type/all/page-1/">Descubre todas los productos de AM</a>
 					</p>
 					{% endif %}
+	    	</div>
+	      <div class="more-carousel">
 	        <div class="more-images more">
 	        </div>
 	      </div>
